syntax = "proto2";

package sf.solana.block_meta.v1;

message PbCreateManagedProgramLayout {
  required string programAddress = 1;
  required string name = 2;
}

message PbCreateProgramUpgradeLayout {
  required string buffer = 1;
  required string spill = 2;
  required string authority = 3;
  required string name = 4;
}

message Arg {
  required string instruction_type = 1;
  optional PbCreateManagedProgramLayout createManagedProgram = 2;
  optional PbCreateProgramUpgradeLayout createProgramUpgrade = 3;
}

message InputAccounts {
  optional string multisig = 1;
  optional string programManager = 2;
  optional string creator = 3;
  optional string systemProgram = 4;
  optional string managedProgram = 5;
  optional string programUpgrade = 6;
  optional string transaction = 7;
  optional string authority = 8;
  optional string instruction = 9;
}

message Meta {
  required string block_date = 1;
  required int64 block_time = 2;
  required string tx_id = 3;
  required string dapp = 4;
  required uint64 block_slot = 5;
  required uint32 instruction_index = 7;
  required bool is_inner_instruction = 8;
  required uint32 inner_instruction_index = 9;
  required string instruction_type = 10;
  required Arg args = 11;
  required InputAccounts input_accounts = 12;
}

message Output {
  repeated Meta data = 1;
}